--- a/README
+++ b/README
@@ -6,7 +6,7 @@ of decorators.  It is made up of the following parts
 * decorate.core - This is where the core decorator forms are stored
 * decorate.invokable - This is where definvoke is stored.  Contributed by Meikel Brandmeyer
 * decorate.same - The same protocol
-* decorate.common
+* decorate.common - Includes common decorators, such as logging, validating, coercing.  Also includes the word-like protocol.
 
 ## Usage
 
